# pennywise

./: .gitignore  .gitmodules  pyproject.toml  replit.nix
django_project/: settings.py  urls.py
mainsite/templates/: base.html  base_generic.html
mainsite/templates/registration/: login.html
