[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.3.2"]

[tool]
[tool.poetry]
authors = ["Rene Garcia <rene@numerics.mx>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-tables2 = "2.5.3"
django-filter = "23.1"
django-bootstrap5 = "23.1"
[tool.poetry.dev-dependencies]
